--- a/package.json
+++ b/package.json
@@ -3,18 +3,53 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "lodash-move": "^1.1.1",
+    "pdfjs-dist": "^2.0.943",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
+    "react-beautiful-dnd-grid": "^0.1.3-alpha",
+    "react-device-detect": "^1.13.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
+    "react-dnd-touch-backend": "^11.1.3",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-draggable": "^4.4.3",
+    "react-image-puzzle": "^0.1.1",
+    "react-image-puzzle-touch": "^0.1.1",
+    "react-motion": "^0.5.2",
+    "react-native": "^0.62.2",
+    "react-native-cli": "^2.0.1",
+    "react-pdf-to-image": "^1.0.2",
+    "react-scripts": "3.4.1",
+    "react-spring": "^8.0.27",
+    "react-use-gesture": "^7.0.0",
+    "react-with-gesture": "^4.0.8",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "./node_modules/.bin/webpack --mode=production",
+    "watch": "./node_modules/.bin/webpack --mode=production --watch",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "webpack": "^4.26.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-node-externals": "^1.7.2",
+    "worker-loader": "^2.0.0"
   },
   "eslintConfig": {
     "extends": "react-app"
